--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@ body{
 
 .card{
   width:100%;
-  min-height:100vh;
+  max-width:100%;   /* removes fixed width limit */
   background:#0f172a;
   padding:24px;
+  border-radius:14px;
   text-align:center;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
 }
+
 
 .number{
   font-size:3rem;
